<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/getting_started_message"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/emailDialogEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/passwordDialogEditText"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/password"/>
    <EditText
        android:id="@+id/retypePasswordDialogEditText"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/retype_password"/>

    <Button android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/createAccountDialogButton" android:text="@string/create_account"
        android:background="@drawable/button_selector"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:text="@string/already_have_account"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/usaflagrevisedblue"
            android:clickable="true"
            android:textIsSelectable="false"
            android:id="@+id/loginTextView" />
    </LinearLayout>
</LinearLayout>