<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.caniborrowyourphone.usa.MainActivity" >

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loggedInAsTextView"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:text="@string/header_text_view" />

    <TextView
        android:id="@+id/numDaysTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/num_days_text_view"
        android:textSize="30sp"
        android:textColor="@color/usaflagred" />

    <TextView
        android:id="@+id/currentlyInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currently_in"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/mainLinearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/currentlyInTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/no_mans_land"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/usaflagred" />

    <LinearLayout
        android:id="@+id/mainLinearLayout"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numDaysTextView"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/enteringCanadaButton"
            android:layout_width="144dp"
            android:layout_height="72dp"
            android:text="@string/entering_canada"
            android:scaleType="centerInside"
            android:layout_marginRight="10dp" />

        <Button
            android:id="@+id/enteringUSAButton"
            android:layout_width="144dp"
            android:layout_height="72dp"
            android:text="@string/entering_usa"
            android:scaleType="centerInside"
            android:layout_marginLeft="10dp" />

        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locationTextView"
        android:layout_marginTop="34dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="144dp"
            android:layout_height="48dp"
            android:onClick="viewSettings"
            android:text="@string/settings"
            android:clickable="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_selector"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/viewCalendarButton"
            android:layout_width="144dp"
            android:layout_height="48dp"
            android:onClick="viewCalendar"
            android:text="@string/calendar"
            android:clickable="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_selector"
            android:textColor="@color/white" />

        </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/loggedInAsTextView"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:background="@color/usaflagrevisedblue"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_alignParentTop="true" />

</RelativeLayout>
