<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/oldPasswordDialogEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/old_password_hint"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/newPasswordDialogEditText"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/new_password_hint"/>
    <EditText
        android:id="@+id/retypeNewPasswordDialogEditText"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/retype_new_password_hint"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="72dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="144dp"
            android:layout_height="fill_parent"
            android:text="@string/change_password"
            android:id="@+id/changePasswordButton"
            android:background="@drawable/button_selector"
            android:textColor="@color/white"
            android:layout_marginRight="10dp" />

        <Button
            android:layout_width="144dp"
            android:layout_height="fill_parent"
            android:text="@string/cancel"
            android:id="@+id/cancelDialogButton"
            android:background="@drawable/button_selector"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

</LinearLayout>