<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_message"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/emailDialogEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginBottom="16dp">

        <Button android:layout_width="144dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/sendEmailDialogButton"
            android:text="@string/send_email"
            android:background="@drawable/button_selector"
            android:textColor="@color/white"
            android:layout_marginRight="10dp" />

        <Button android:layout_width="144dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/cancelDialogButton"
            android:text="@string/cancel"
            android:background="@drawable/button_selector"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

</LinearLayout>