<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
        <EditText
            android:id="@+id/usernameDialogEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/username"/>
        <EditText
            android:id="@+id/passwordDialogEditText"
            android:inputType="textPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/password"/>
        <EditText
            android:id="@+id/retypePasswordDialogEditText"
            android:inputType="textPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/retype_password"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button android:layout_width="0px"
            android:layout_height="wrap_content" android:layout_weight="0.5"
            android:id="@+id/createAccountDialogButton" android:text="@string/create"/>
        <Button android:layout_width="0px"
            android:layout_height="wrap_content" android:layout_weight="0.5"
            android:id="@+id/cancelDialogButton" android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>