<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.caniborrowyourphone.usa.CalendarView" >

    <Spinner
        android:id="@+id/selectMonthSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/months_prompt"
        android:transitionGroup="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/daysInUSAMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days_in_usa"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/daysInUSATextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/daysInUSAMessageTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/none"
        android:textSize="30dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prevMonthButton"
        android:layout_alignTop="@+id/selectMonthSpinner"
        android:layout_toLeftOf="@+id/selectMonthSpinner"
        android:background="@drawable/leftarrow64"
        android:layout_alignBottom="@+id/selectMonthSpinner" />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nextMonthButton"
        android:background="@drawable/rightarrow64"
        android:layout_alignTop="@+id/selectMonthSpinner"
        android:layout_toRightOf="@+id/selectMonthSpinner"
        android:layout_alignBottom="@+id/selectMonthSpinner" />

</RelativeLayout>
